#1297: BREAKING: Relocate ModelGenerator.Compile() --> Neon.CSharp.CSharpHelper.Compile()

--- a/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
+++ b/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
@@ -91,6 +91,13 @@
   -->
 
   <Target Name="ModelGen" BeforeTargets="BeforeBuild">
+    
+    <!-- Clear the [modelgen] tool platform target folders -->
+
+    <RemoveDir Directories="$(NF_ROOT)\Lib\Neon.ModelGenerator\linux-x64;$(NF_ROOT)\Lib\Neon.ModelGenerator\osx-x64;$(NF_ROOT)\Lib\Neon.ModelGenerator\win-x64" />
+
+    <!-- Build the [modelgen] tool for the supported platforms -->
+    
     <Exec Command="neon-build dotnet publish &quot;$(NF_ROOT)\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;$(NF_ROOT)\Lib\Neon.ModelGenerator\linux-x64&quot; --configuration $(configuration) --runtime linux-x64" />
     <Exec Command="neon-build dotnet publish &quot;$(NF_ROOT)\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;$(NF_ROOT)\Lib\Neon.ModelGenerator\osx-x64&quot; --configuration $(configuration) --runtime osx-x64" />
     <Exec Command="neon-build dotnet publish &quot;$(NF_ROOT)\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;$(NF_ROOT)\Lib\Neon.ModelGenerator\win-x64&quot; --configuration $(configuration) --runtime win-x64" />
