#1303: Image tags are hardcoded to [neonkube-0.1.0-alpha] in Helm [values.yaml] files

--- a/Lib/Neon.Kube/Resources/Helm/neon-acme/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-acme/values.yaml
@@ -6,10 +6,9 @@ replicaCount: 1
 
 image:
   organization: neon-registry.node.local
+  tag: {{ .Values.image.tag }}
   repository: neon-acme
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "neonkube-0.1.0-alpha"
 
 imagePullSecrets: []
 nameOverride: ""
