--- a/Lib/Neon.Kube.BareMetal/Neon.Kube.BareMetal.csproj
+++ b/Lib/Neon.Kube.BareMetal/Neon.Kube.BareMetal.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
-    <Version>2.10.0-internal</Version>
+    <Version>10000.0.1362-dev-master</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
