--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Kube</RootNamespace>
     <Authors>neonFORGE Team</Authors>
-    <Version>2.10.0-preview</Version>
+    <Version>10000.0.1362-dev-master</Version>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
     <Description>INTERNAL USE ONLY: Core library used by neonKUBE related tooling.</Description>
@@ -570,14 +570,6 @@
     <None Remove="Resources\Helm\neon-acme\Chart.yaml" />
     <None Remove="Resources\Helm\neon-acme\templates\api-service.yaml" />
     <None Remove="Resources\Helm\neon-acme\values.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-api\.helmignore" />
-    <None Remove="Resources\Helm\neon-cluster-api\Chart.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-api\templates\authorizationpolicy.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-api\templates\deployment.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-api\templates\service.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-api\templates\serviceaccount.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-api\templates\_helpers.tpl" />
-    <None Remove="Resources\Helm\neon-cluster-api\values.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
     <None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\templates\_helpers.tpl" />
@@ -1212,14 +1204,6 @@
     <EmbeddedResource Include="Resources\Helm\minio\templates\_helpers.tpl" />
     <EmbeddedResource Include="Resources\Helm\minio\values.yaml" />
     <EmbeddedResource Include="Resources\Helm\neon-acme\values.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\.helmignore" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\Chart.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\templates\authorizationpolicy.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\templates\deployment.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\templates\service.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\templates\serviceaccount.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\templates\_helpers.tpl" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-api\values.yaml" />
     <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\.helmignore" />
     <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\Chart.yaml" />
     <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\values.yaml" />
