--- a/Lib/Neon.Xunit.Temporal/Neon.Xunit.Temporal.csproj
+++ b/Lib/Neon.Xunit.Temporal/Neon.Xunit.Temporal.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net48; netcoreapp3.1; net5.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Xunit.Temporal</RootNamespace>
-    <Version>10000.0.1362-dev-master</Version>
+    <Version>2.18.2-alpha</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Description>Xunit test fixture for Temporal</Description>
